infra/k8s/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"nginx-backend-config"}}'
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
